New errors validations added
1. Summary Slide Link
2. Declined Reason Lvl2
3. Reason On Hold

Code Enhacements

1. Advisor // Advisor Name // Date Advisor Assigned
2. Readout delivery status
3. Reason Declined // Item recommended

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -100,33 +100,11 @@
    "outputs": [],
    "source": [
     "# Advisor // Advisor Name // Date Advisor Assigned\n",
-    "\n",
     "Advisor = df_compass[['Request ID', 'RR (internal)', 'Advisor', 'Advisor Name', 'Date Advisor Assigned']].copy()\n",
-    "Advisor['Date Advisor Assigned'] = format_date_column(Advisor['Date Advisor Assigned']) \n",
-    "\n",
-    "for id, row in Advisor.iterrows():\n",
-    "    if row['RR (internal)'] == 'Yes':\n",
-    "        if pd.isnull(row['Advisor']) == True:\n",
-    "            Advisor.loc[id, 'Advisor'] = 'Empty'\n",
-    "        else:\n",
-    "            Advisor.loc[id, 'Advisor'] = None\n",
-    "\n",
-    "        if pd.isnull(row['Advisor Name']) == True:\n",
-    "            Advisor.loc[id, 'Advisor Name'] = 'Empty Name'\n",
-    "        else:\n",
-    "            Advisor.loc[id, 'Advisor Name'] = None\n",
-    "\n",
-    "        if row['Date Advisor Assigned'] == Timestamp('2030-2-2 00:00:00'):\n",
-    "            Advisor.loc[id, 'Date Advisor Assigned'] = 'Empty date'\n",
-    "        elif row['Date Advisor Assigned'] == Timestamp('2050-2-2 00:00:00'):\n",
-    "            Advisor.loc[id, 'Date Advisor Assigned'] = 'Format Error'\n",
-    "        else:\n",
-    "            Advisor.loc[id, 'Date Advisor Assigned'] = None    \n",
-    "    else:\n",
-    "        Advisor.loc[id, 'Advisor'] = None\n",
-    "        Advisor.loc[id, 'Advisor Name'] = None\n",
-    "        Advisor.loc[id, 'Date Advisor Assigned'] = None\n",
-    "\n",
+    "Advisor = Advisor[Advisor['RR (internal)'] == 'Yes']\n",
+    "Advisor['Advisor'] = Advisor['Advisor'].apply(lambda x: None if pd.isna(x) == False else 'Empty value')\n",
+    "Advisor['Advisor Name'] = Advisor['Advisor Name'].apply(lambda x: None if pd.isna(x) == False else 'Empty value')\n",
+    "Advisor['Date Advisor Assigned'] = Advisor['Date Advisor Assigned'].apply(lambda x: None if pd.isna(x) == False else 'Empty value')\n",
     "Advisor.dropna(axis=0, how='all', subset=['Advisor', 'Advisor Name', 'Date Advisor Assigned'], inplace=True)\n",
     "Advisor.drop(axis=1, columns=['RR (internal)'], inplace=True)"
    ]
@@ -137,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Date Readaout Done\n",
+    "# Date Readaout Done // Cisco.\n",
     "\n",
     "dat_rdone = df_compass[['Request ID', 'Date Advisor Assigned', 'Date Readout Done']].copy()\n",
     "dat_rdone['Date Advisor Assigned'] = format_date_column(dat_rdone['Date Advisor Assigned']) \n",
@@ -160,7 +138,8 @@
     "        dat_rdone.loc[id, 'Date Readout Done'] = None\n",
     "\n",
     "dat_rdone.dropna(axis=0, subset=['Date Readout Done'], inplace=True)\n",
-    "dat_rdone.drop(axis=1, columns=['Date Advisor Assigned'], inplace=True)"
+    "dat_rdone.drop(axis=1, columns=['Date Advisor Assigned'], inplace=True)\n",
+    "dat_rdone"
    ]
   },
   {
@@ -171,17 +150,10 @@
    "source": [
     "# Readout delivery status\n",
     "\n",
-    "del_status = df_compass[['Request ID',\n",
-    "                         'Date Readout Done', 'Readout Delivery Status']].copy()\n",
-    "\n",
-    "for id, row in del_status.iterrows():\n",
-    "    if pd.isna(row['Date Readout Done']) == False and pd.isna(row['Readout Delivery Status']) == True:\n",
-    "        del_status.loc[id, 'Readout Delivery Status'] = 'Empty value'\n",
-    "    else:\n",
-    "        del_status.loc[id, 'Readout Delivery Status'] = None\n",
-    "\n",
-    "del_status.dropna(axis=0, subset=['Readout Delivery Status'], inplace=True)\n",
-    "del_status.drop(axis=1, columns=['Date Readout Done'], inplace=True)\n"
+    "del_status = df_compass[['Request ID', 'Date Readout Done', 'Readout Delivery Status']].copy()\n",
+    "del_status = del_status[(pd.notna(del_status['Date Readout Done'])) & (pd.isna(del_status['Readout Delivery Status']))]\n",
+    "del_status['Readout Delivery Status'] = 'Empty value'\n",
+    "del_status.drop(axis=1, columns=['Date Readout Done'], inplace=True)"
    ]
   },
   {
@@ -192,21 +164,19 @@
    "source": [
     "# Reason Declined // Item recommended\n",
     "\n",
-    "res_declined = df_compass[['Request ID', 'Readout Delivery Status',\n",
-    "                           'Reason Declined', 'Items Recommended']].copy()\n",
+    "declined = df_compass[['Request ID', 'Readout Delivery Status', 'Reason Declined']]\n",
+    "declined = declined[declined['Readout Delivery Status'] == 'Declined']\n",
+    "declined = declined[pd.isna(declined['Reason Declined'])]\n",
+    "declined['Reason Declined'] = 'Empty value'\n",
+    "declined.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)\n",
     "\n",
-    "for id, row in res_declined.iterrows():\n",
-    "    if row['Readout Delivery Status'] == 'Declined' and pd.isna(row['Reason Declined']) == True:\n",
-    "        res_declined.loc[id, 'Reason Declined'] = 'Empty value'\n",
-    "    elif (row['Readout Delivery Status'] == 'Complete' or row['Readout Delivery Status'] == 'Emailed Recommendations') and pd.isna(row['Items Recommended']) == True:\n",
-    "        res_declined.loc[id, 'Items Recommended'] = 'Empty value'\n",
-    "    else:\n",
-    "        res_declined.loc[id, 'Reason Declined'] = None\n",
-    "        res_declined.loc[id, 'Items Recommended'] = None\n",
+    "item = df_compass[['Request ID', 'Readout Delivery Status', 'Items Recommended']].copy()\n",
+    "item = item[(item['Readout Delivery Status'] == 'Complete') | (item['Readout Delivery Status'] == 'Emailed Recommendations')]\n",
+    "item = item[pd.isna(item['Items Recommended'])]\n",
+    "item['Items Recommended'] = 'Empty value'\n",
+    "item.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)\n",
     "\n",
-    "res_declined.dropna(axis=0, how='all', subset=[\n",
-    "                    'Reason Declined', 'Items Recommended'], inplace=True)\n",
-    "res_declined.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)\n"
+    "res_declined = declined.merge(item, how='outer', left_on='Request ID', right_on='Request ID')"
    ]
   },
   {
@@ -564,6 +534,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Closing Date\n",
+    "# En pausa dado que la columna readout done tiene formato string\n",
+    "\n",
+    "clos_date = df_compass[['Request ID', 'Date Readout Done', 'Closing Date']].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Summary Slide Link\n",
+    "\n",
+    "sum_link = df_compass[['Request ID', 'Date Presentation Created', 'Summary Slide Link']].copy()\n",
+    "sum_link = sum_link[pd.notna(sum_link['Date Presentation Created'])]\n",
+    "sum_link = sum_link[pd.isna(sum_link['Summary Slide Link'])]\n",
+    "sum_link['Summary Slide Link'] = 'Empty value'\n",
+    "sum_link.drop(axis=1, columns=['Date Presentation Created'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Account Status // Account Stage\n",
+    "\n",
+    "account_st = df_compass[['Request ID', 'Readout Delivery Status', 'Account Status', 'Account Stage']].copy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Declined Reason Lvl2\n",
+    "\n",
+    "dec_reason_2 = df_compass[['Request ID', 'Readout Delivery Status', 'Declined Reason Lvl2']].copy()\n",
+    "dec_reason_2 = dec_reason_2[dec_reason_2['Readout Delivery Status'] == 'Declined']\n",
+    "dec_reason_2 = dec_reason_2[pd.isna(dec_reason_2['Declined Reason Lvl2'])]\n",
+    "dec_reason_2['Declined Reason Lvl2'] = 'Empty value'\n",
+    "dec_reason_2.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reason On Hold\n",
+    "\n",
+    "res_hold = df_compass[['Request ID', '# Days on Hold (Analysis)', '# Days on Hold (Workshop)', 'Reason On Hold']].copy()\n",
+    "res_hold = res_hold[(pd.notna(res_hold['# Days on Hold (Analysis)'])) | (pd.notna(res_hold['# Days on Hold (Workshop)']))]\n",
+    "res_hold = res_hold[pd.isna(res_hold['Reason On Hold'])]\n",
+    "res_hold['Reason On Hold'] = 'Empty value'\n",
+    "res_hold.drop(axis=1, columns=['# Days on Hold (Analysis)'], inplace=True)\n",
+    "res_hold.drop(axis=1, columns=['# Days on Hold (Workshop)'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Merge\n",
     "\n",
     "final_report = Advisor.merge(dat_rdone, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
@@ -590,7 +629,10 @@
     "    irr_presented, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "    at_interested_irr, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "    pr_presented, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
-    "    at_interested_pr, how='outer', left_on='Request ID', right_on='Request ID')"
+    "    at_interested_pr, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    sum_link, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    dec_reason_2, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    res_hold, how='outer', left_on='Request ID', right_on='Request ID')"
    ]
   },
   {
@@ -599,7 +641,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_report[final_report['Request ID'].duplicated()]"
+    "final_report"
    ]
   },
   {
