--- a/Main.ipynb
+++ b/Main.ipynb
@@ -73,24 +73,23 @@
    "source": [
     "def format_date_column(serie):\n",
     "    format_date = []\n",
-    "    for index, value in serie.iteritems():\n",
-    "        if type(value) != datetime and type(value) != Timestamp:\n",
-    "            if pd.isnull(value) or value != value:\n",
-    "                # Fechas vacias\n",
-    "                value = datetime.strptime(\n",
-    "                    '2030-2-2 00:00:00', '%Y-%m-%d %H:%M:%S')\n",
+    "    for id, value in serie.iteritems():\n",
+    "        if pd.notna(value) == True:\n",
+    "            try:\n",
+    "                value = datetime.strptime(str(value), '%Y-%m-%d %H:%M:%S')\n",
     "                format_date.append(value)\n",
-    "            else:\n",
-    "                # Error de formato\n",
-    "                value = datetime.strptime(\n",
-    "                    '2050-2-2 00:00:00', '%Y-%m-%d %H:%M:%S')\n",
-    "                format_date.append(value)\n",
+    "            except:\n",
+    "                try:\n",
+    "                    value = datetime.strptime(str(value), '%Y-%m-%d')\n",
+    "                    format_date.append(value)\n",
+    "                except:\n",
+    "                    value = 'Format Error'\n",
+    "                    format_date.append(value)\n",
     "        else:\n",
-    "            # Fechas normales\n",
-    "            value = datetime.strptime(str(value), '%Y-%m-%d %H:%M:%S')\n",
+    "            value = 'Empty date'\n",
     "            format_date.append(value)\n",
     "\n",
-    "    return format_date\n"
+    "    return format_date"
    ]
   },
   {
@@ -119,27 +118,17 @@
     "\n",
     "dat_rdone = df_compass[['Request ID', 'Date Advisor Assigned', 'Date Readout Done']].copy()\n",
     "dat_rdone['Date Advisor Assigned'] = format_date_column(dat_rdone['Date Advisor Assigned']) \n",
-    "dat_rdone['Date Readout Done'] = format_date_column(dat_rdone['Date Readout Done']) \n",
+    "dat_rdone['Date Readout Done'] = format_date_column(dat_rdone['Date Readout Done'])\n",
+    "dat_rdone.drop(axis=0, labels=dat_rdone[(dat_rdone['Date Advisor Assigned'] == 'Empty date') & (dat_rdone['Date Readout Done'] == 'Empty date')].index, inplace=True)\n",
+    "dat_rdone.drop(axis=0, labels=dat_rdone[(dat_rdone['Date Advisor Assigned'] == 'Empty date') & (dat_rdone['Date Readout Done'].apply(type) != str)].index, inplace=True)\n",
     "\n",
     "for id, row in dat_rdone.iterrows():\n",
-    "    if row['Date Readout Done'] != Timestamp('2030-2-2 00:00:00') and row['Date Readout Done'] != Timestamp('2050-2-2 00:00:00'):\n",
-    "        if row['Date Advisor Assigned'] != Timestamp('2030-2-2 00:00:00') and row['Date Advisor Assigned'] != Timestamp('2050-2-2 00:00:00'):\n",
-    "            if row['Date Advisor Assigned'] > row['Date Readout Done']:\n",
-    "                dat_rdone.loc[id, 'Date Readout Done'] = 'Date Advisor Assigned greater'\n",
-    "            else:\n",
-    "                dat_rdone.loc[id, 'Date Readout Done'] = None\n",
-    "        else:\n",
-    "            dat_rdone.loc[id, 'Date Readout Done'] = None \n",
-    "    elif row['Date Readout Done'] == Timestamp('2030-2-2 00:00:00') and row['Date Advisor Assigned'] != Timestamp('2030-2-2 00:00:00'):\n",
-    "        dat_rdone.loc[id, 'Date Readout Done'] = 'Empty Date'\n",
-    "    elif row['Date Readout Done'] == Timestamp('2050-2-2 00:00:00'):\n",
-    "        dat_rdone.loc[id, 'Date Readout Done'] = 'Format error'\n",
-    "    else:\n",
-    "        dat_rdone.loc[id, 'Date Readout Done'] = None\n",
-    "\n",
-    "dat_rdone.dropna(axis=0, subset=['Date Readout Done'], inplace=True)\n",
-    "dat_rdone.drop(axis=1, columns=['Date Advisor Assigned'], inplace=True)\n",
-    "dat_rdone"
+    "    if type(row['Date Readout Done']) == datetime and type(row['Date Advisor Assigned']) == datetime:\n",
+    "        if row['Date Advisor Assigned'] > row['Date Readout Done']:\n",
+    "            dat_rdone.loc[id, 'Date Readout Done'] = 'Date Advisor Assigned greater'\n",
+    "            \n",
+    "dat_rdone.drop(axis=0, labels=dat_rdone[dat_rdone['Date Readout Done'].apply(type) == datetime].index, inplace=True)\n",
+    "dat_rdone.drop(axis=1, columns=['Date Advisor Assigned'], inplace=True)"
    ]
   },
   {
@@ -200,15 +189,20 @@
    "outputs": [],
    "source": [
     "# Date presentation Created\n",
-    "# Note: The column date readout done do not have the correct format (it's string)\n",
+    "# Note: The column Date Presentation Created do not have the correct format (it's string)\n",
     "\n",
     "pre_created = df_compass[['Request ID', 'Date Advisor Assigned', 'Date Presentation Created']].copy()\n",
     "pre_created['Date Advisor Assigned'] = format_date_column(pre_created['Date Advisor Assigned']) \n",
     "pre_created['Date Presentation Created'] = format_date_column(pre_created['Date Presentation Created']) \n",
-    "pre_created = pre_created[(pre_created['Date Presentation Created'] < pre_created['Date Advisor Assigned'])]\n",
-    "pre_created.drop(labels=pre_created[pre_created['Date Advisor Assigned'] == '2030-02-02'].index, axis=0, inplace=True)\n",
-    "pre_created.drop(labels=pre_created[pre_created['Date Advisor Assigned'] == '2050-02-02'].index, axis=0, inplace=True)\n",
-    "pre_created['Date Presentation Created'] = 'Date Advisor Assigned is greater'\n",
+    "pre_created.drop(axis=0, labels=pre_created[(pre_created['Date Advisor Assigned'] == 'Empty date') & (pre_created['Date Presentation Created'] == 'Empty date')].index, inplace=True)\n",
+    "pre_created.drop(axis=0, labels=pre_created[(pre_created['Date Advisor Assigned'] == 'Empty date') & (pre_created['Date Presentation Created'].apply(type) != str)].index, inplace=True)\n",
+    "\n",
+    "for id, row in pre_created.iterrows():\n",
+    "    if type(row['Date Presentation Created']) == datetime and type(row['Date Advisor Assigned']) == datetime:\n",
+    "        if row['Date Advisor Assigned'] > row['Date Presentation Created']:\n",
+    "            pre_created.loc[id, 'Date Presentation Created'] = 'Date Advisor Assigned greater'\n",
+    "\n",
+    "pre_created.drop(axis=0, labels=pre_created[pre_created['Date Presentation Created'].apply(type) == datetime].index, inplace=True)\n",
     "pre_created.drop(axis=1, columns=['Date Advisor Assigned'], inplace=True)"
    ]
   },
@@ -252,10 +246,15 @@
     "dat_invite_s = df_compass[['Request ID', 'Date Advisor Assigned', 'Date Invite Sent']].copy()\n",
     "dat_invite_s['Date Advisor Assigned'] = format_date_column(dat_invite_s['Date Advisor Assigned']) \n",
     "dat_invite_s['Date Invite Sent'] = format_date_column(dat_invite_s['Date Invite Sent'])\n",
-    "dat_invite_s = dat_invite_s[dat_invite_s['Date Advisor Assigned'] > dat_invite_s['Date Invite Sent']]\n",
-    "dat_invite_s.drop(labels=dat_invite_s[dat_invite_s['Date Advisor Assigned'] == '2030-02-02'].index, axis=0, inplace=True)\n",
-    "dat_invite_s.drop(labels=dat_invite_s[dat_invite_s['Date Advisor Assigned'] == '2050-02-02'].index, axis=0, inplace=True)\n",
-    "dat_invite_s['Date Invite Sent'] = 'Date Advisor Assigned greater'\n",
+    "dat_invite_s.drop(axis=0, labels=dat_invite_s[(dat_invite_s['Date Advisor Assigned'] == 'Empty date') & (dat_invite_s['Date Invite Sent'] == 'Empty date')].index, inplace=True)\n",
+    "dat_invite_s.drop(axis=0, labels=dat_invite_s[(dat_invite_s['Date Advisor Assigned'] == 'Empty date') & (dat_invite_s['Date Invite Sent'].apply(type) != str)].index, inplace=True)\n",
+    "\n",
+    "for id, row in dat_invite_s.iterrows():\n",
+    "    if type(row['Date Advisor Assigned']) == datetime and type(row['Date Invite Sent']) == datetime:\n",
+    "        if row['Date Advisor Assigned'] > row['Date Invite Sent']:\n",
+    "            dat_invite_s.loc[id, 'Date Invite Sent'] = 'Date Advisor Assigned is greater'\n",
+    "\n",
+    "dat_invite_s.drop(axis=0, labels=dat_invite_s[dat_invite_s['Date Invite Sent'].apply(type) == datetime].index, inplace=True)\n",
     "dat_invite_s.drop(axis=1, columns=['Date Advisor Assigned'], inplace=True)"
    ]
   },
@@ -266,7 +265,20 @@
    "outputs": [],
    "source": [
     "# Date Summary Sent\n",
-    "# En pausa dado que la columna readout done tiene formato string"
+    "\n",
+    "dat_sum_sent = df_compass[['Request ID', 'Date Readout Done', 'Date Summary Sent']].copy()\n",
+    "dat_sum_sent['Date Summary Sent'] = format_date_column(dat_sum_sent['Date Summary Sent']) \n",
+    "dat_sum_sent['Date Readout Done'] = format_date_column(dat_sum_sent['Date Readout Done'])\n",
+    "dat_sum_sent.drop(axis=0, labels=dat_sum_sent[(dat_sum_sent['Date Readout Done'] == 'Empty date') & (dat_sum_sent['Date Summary Sent'] == 'Empty date')].index, inplace=True)\n",
+    "dat_sum_sent.drop(axis=0, labels=dat_sum_sent[(dat_sum_sent['Date Readout Done'] == 'Empty date') & (dat_sum_sent['Date Summary Sent'].apply(type) != str)].index, inplace=True)\n",
+    "\n",
+    "for id, row in dat_sum_sent.iterrows():\n",
+    "    if type(row['Date Summary Sent']) == datetime and type(row['Date Readout Done']) == datetime:\n",
+    "        if row['Date Readout Done'] > row['Date Summary Sent']:\n",
+    "            dat_sum_sent.loc[id, 'Date Summary Sent'] = 'Date Readout is greater'\n",
+    "\n",
+    "dat_sum_sent.drop(axis=0, labels=dat_sum_sent[dat_sum_sent['Date Summary Sent'].apply(type) == datetime].index, inplace=True)\n",
+    "dat_sum_sent.drop(axis=1, columns=['Date Readout Done'], inplace=True)"
    ]
   },
   {
@@ -535,9 +547,20 @@
    "outputs": [],
    "source": [
     "# Closing Date\n",
-    "# En pausa dado que la columna readout done tiene formato string\n",
     "\n",
-    "clos_date = df_compass[['Request ID', 'Date Readout Done', 'Closing Date']].copy()"
+    "clos_date = df_compass[['Request ID', 'Date Readout Done', 'Closing Date']].copy()\n",
+    "clos_date['Closing Date'] = format_date_column(clos_date['Closing Date']) \n",
+    "clos_date['Date Readout Done'] = format_date_column(clos_date['Date Readout Done'])\n",
+    "clos_date.drop(axis=0, labels=clos_date[(clos_date['Date Readout Done'] == 'Empty date') & (clos_date['Closing Date'] == 'Empty date')].index, inplace=True)\n",
+    "clos_date.drop(axis=0, labels=clos_date[(clos_date['Date Readout Done'] == 'Empty date') & (clos_date['Closing Date'].apply(type) != str)].index, inplace=True)\n",
+    "\n",
+    "for id, row in clos_date.iterrows():\n",
+    "    if type(row['Closing Date']) == datetime and type(row['Date Readout Done']) == datetime:\n",
+    "        if row['Date Readout Done'] > row['Closing Date']:\n",
+    "            clos_date.loc[id, 'Closing Date'] = 'Date Readout is greater'\n",
+    "\n",
+    "clos_date.drop(axis=0, labels=clos_date[clos_date['Closing Date'].apply(type) == datetime].index, inplace=True)\n",
+    "clos_date.drop(axis=1, columns=['Date Readout Done'], inplace=True)"
    ]
   },
   {
@@ -563,7 +586,38 @@
    "source": [
     "# Account Status // Account Stage\n",
     "\n",
-    "account_st = df_compass[['Request ID', 'Readout Delivery Status', 'Account Status', 'Account Stage']].copy()\n"
+    "account_st = df_compass[['Request ID', 'Readout Delivery Status', 'Account Status', 'Account Stage']].copy()\n",
+    "account_st = account_st[~(\n",
+    "                        ((account_st['Readout Delivery Status'] == 'Declined') & \n",
+    "                        ((account_st['Account Status'] == 'B_AT not interested') | (account_st['Account Status'] == 'B_Unqualified_Wrong AT member')) & \n",
+    "                        (account_st['Account Stage'] == 'B_1st Contact'))\n",
+    "                        |\n",
+    "                        ((account_st['Readout Delivery Status'] == 'Declined') & \n",
+    "                        ((account_st['Account Status'] == 'C_Unqualified - Duplicated') | (account_st['Account Status'] == 'C_Unqualified - 25K')) & \n",
+    "                        (account_st['Account Stage'] == 'C_Analysis'))\n",
+    "                        |\n",
+    "                        ((account_st['Readout Delivery Status'] == 'Declined') & \n",
+    "                        ((account_st['Account Status'] == 'E_Declined - AT not interested') | (account_st['Account Status'] == 'E_Unresponsive')) & \n",
+    "                        (account_st['Account Stage'] == 'E_Workshop'))\n",
+    "                        |\n",
+    "                        ((account_st['Readout Delivery Status'] == 'Complete') & \n",
+    "                        (account_st['Account Status'] == 'F_Completed_ Workshop Done') & \n",
+    "                        (account_st['Account Stage'] == 'F_Summary'))\n",
+    "                        |\n",
+    "                        ((account_st['Readout Delivery Status'] == 'Emailed Recommendations') & \n",
+    "                        (account_st['Account Status'] == 'F_Completed_Analysis Sent') & \n",
+    "                        (account_st['Account Stage'] == 'F_Summary'))\n",
+    "                        |\n",
+    "                        ((account_st['Readout Delivery Status'] == 'Postponed') & \n",
+    "                        (account_st['Account Status'] == 'E_Postponed') & \n",
+    "                        (account_st['Account Stage'] == 'E_Workshop'))\n",
+    "                        )]\n",
+    "\n",
+    "account_st.dropna(axis=0, how='all', subset=['Readout Delivery Status', 'Account Status', 'Account Stage'], inplace=True)\n",
+    "account_st['Account Status'] = 'Match error between Readout Status, Account Status and Account Stage'\n",
+    "account_st['Account Stage'] = 'Match error between Readout Status, Account Status and Account Stage'\n",
+    "account_st.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)\n",
+    "account_st\n"
    ]
   },
   {
@@ -599,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,6 +667,7 @@
     "    pre_created_tim, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "    re_duration_m, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "    dat_invite_s, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    dat_sum_sent, how='outer', left_on='Request ID', right_on='Request ID').merge(  \n",
     "    ibvalue_and_cover, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "    at_interested, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "    up_sspt, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
@@ -630,18 +685,20 @@
     "    at_interested_irr, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "    pr_presented, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "    at_interested_pr, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    clos_date, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "    sum_link, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "    dec_reason_2, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
-    "    res_hold, how='outer', left_on='Request ID', right_on='Request ID')"
+    "    res_hold, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    account_st, how='outer', left_on='Request ID', right_on='Request ID')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_report"
+    "#final_report.to_excel('report.xlsx', index=False)"
    ]
   },
   {
