code to send emails with the report was added

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -53,11 +53,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import data with the mails\n",
+    "p = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/Compass%20Names.xlsx\"\\\n",
+    "              , filename = 'Compass_mails.xlsx')\n",
+    "compass_mails = pd.read_excel ('Compass_mails.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# SMTP Mail variables\n",
     "today = datetime.strftime(datetime.today(), '%m-%d-%Y')\n",
     "myMail = 'testNub78@outlook.com'\n",
     "password = 'EasyP4ssword78'\n",
-    "subjectEmail = 'Coverage error report'\n",
+    "subjectEmail = 'Compass error report'\n",
     "\n",
     "msg1 = \"\"\"<h3>Hola, %s</h3>\n",
     "        <p><span style=\"color: rgb(71, 85, 119);\">Parece que tienes varios errores en la informaci&oacute;n registrada en tus cuentas.</span></p>\n",
@@ -616,8 +628,7 @@
     "account_st.dropna(axis=0, how='all', subset=['Readout Delivery Status', 'Account Status', 'Account Stage'], inplace=True)\n",
     "account_st['Account Status'] = 'Match error between Readout Status, Account Status and Account Stage'\n",
     "account_st['Account Stage'] = 'Match error between Readout Status, Account Status and Account Stage'\n",
-    "account_st.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)\n",
-    "account_st\n"
+    "account_st.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)"
    ]
   },
   {
@@ -653,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,11 +705,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#final_report.to_excel('report.xlsx', index=False)"
+    "final_report.to_excel('compass_error_report_%s.xlsx' % today, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Send Mails"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Names of Compass team\n",
+    "\n",
+    "compass_names = df_compass[['Request ID','Advisor Name']]\n",
+    "final_report = final_report.merge(compass_names, how='left', left_on='Request ID', right_on='Request ID')\n",
+    "error_names = final_report['Advisor Name_y'].to_frame().drop_duplicates().dropna()\n",
+    "send_names = error_names.merge(compass_mails, how='left', left_on='Advisor Name_y', right_on='Advisor Name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#outlook server connection\n",
+    "outlServer = smtplib.SMTP(host='smtp-mail.outlook.com', port=587)\n",
+    "\n",
+    "#Initialize encryption\n",
+    "outlServer.starttls()\n",
+    "\n",
+    "#Login in the outlook account using the define variables username and password\n",
+    "outlServer.login(myMail, password)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Definition of the function to send emails\n",
+    "def send_msg(To, From, Subject, Message, s_attach):\n",
+    "    msg = MIMEMultipart()\n",
+    "    msg['From'] = From\n",
+    "    msg['To'] = To\n",
+    "    msg['Subject'] = Subject\n",
+    "    msg_content = MIMEText(Message, 'html', 'utf-8')\n",
+    "    msg.attach(msg_content)\n",
+    "       \n",
+    "    if s_attach == True:\n",
+    "        with open('compass_error_report_%s.xlsx' % today, 'rb') as e:\n",
+    "            exc = MIMEBase('application', 'octet-stream', filename='compass_error_report_%s.xlsx' % today)\n",
+    "            exc.add_header('content-Disposition', 'attachment', filename='compass_error_report_%s.xlsx' % today)\n",
+    "            exc.set_payload(e.read())\n",
+    "            encoders.encode_base64(exc)\n",
+    "            msg.attach(exc)\n",
+    "    \n",
+    "    outlServer.sendmail(From, To, msg.as_string())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for i, sheet in send_names.iterrows():\n",
+    " #   if pd.isnull(sheet['Mail']) == False:\n",
+    "  #      \n",
+    "    #    send_msg(sheet['Mail'], myMail, subjectEmail , msg1 % sheet['Advisor Name'], True)\n",
+    "   #     print(sheet['Mail'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "send_msg('maria.rojas@nub78.com', myMail, subjectEmail , msg1 % 'Maria Paula', True)\n",
+    "send_msg('jonnathan.neira@nub78.com', myMail, subjectEmail , msg1 % 'Jonathan Neira', True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outlServer.quit()"
    ]
   },
   {
