Created the library to format the report file
1. new format_report.py file
2. Added code line to call the new library in the Main file

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -25,13 +25,13 @@
     "import pandas as pd\n",
     "from datetime import datetime, timedelta\n",
     "from pandas import Timestamp\n",
+    "import format_report\n",
     "\n",
     "from email import encoders\n",
     "from os.path import basename\n",
     "from email.mime.text import MIMEText\n",
     "from email.mime.multipart import MIMEMultipart\n",
-    "from email.mime.base import MIMEBase\n",
-    "from string import printable"
+    "from email.mime.base import MIMEBase"
    ]
   },
   {
@@ -709,7 +709,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_report.to_excel('compass_error_report_%s.xlsx' % today, index=False)"
+    "final_report.to_excel('compass_error_report_%s.xlsx' % today, index=False)\n",
+    "format_report.format_excel()"
    ]
   },
   {
@@ -781,11 +782,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#for i, sheet in send_names.iterrows():\n",
-    " #   if pd.isnull(sheet['Mail']) == False:\n",
-    "  #      \n",
-    "    #    send_msg(sheet['Mail'], myMail, subjectEmail , msg1 % sheet['Advisor Name'], True)\n",
-    "   #     print(sheet['Mail'])"
+    "for i, sheet in send_names.iterrows():\n",
+    "    if pd.isnull(sheet['Mail']) == False:\n",
+    "        \n",
+    "        send_msg(sheet['Mail'], myMail, subjectEmail , msg1 % sheet['Advisor Name'], True)\n",
+    "        print(sheet['Mail'])"
    ]
   },
   {
@@ -794,8 +795,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "send_msg('maria.rojas@nub78.com', myMail, subjectEmail , msg1 % 'Maria Paula', True)\n",
-    "send_msg('jonnathan.neira@nub78.com', myMail, subjectEmail , msg1 % 'Jonathan Neira', True)"
+    "#send_msg('maria.rojas@nub78.com', myMail, subjectEmail , msg1 % 'Maria Paula', True)\n",
+    "#wqgit losend_msg('jonnathan.neira@nub78.com', myMail, subjectEmail , msg1 % 'Jonathan Neira', True)"
    ]
   },
   {
