--- a/main.ipynb
+++ b/main.ipynb
@@ -89,23 +89,23 @@
     "\n",
     "def format_date_column(serie):\n",
     "    format_date = []\n",
-    "    for index, value in serie.iteritems():\n",
-    "        if type(value) != datetime and type(value) != Timestamp:  \n",
-    "            if pd.isnull(value) or value != value:\n",
-    "                #Fechas vacias\n",
-    "                value = datetime.strptime('2030-2-2 00:00:00', '%Y-%m-%d %H:%M:%S')\n",
+    "    for id, value in serie.iteritems():\n",
+    "        if pd.notna(value) == True:\n",
+    "            try:\n",
+    "                value = datetime.strptime(str(value), '%Y-%m-%d %H:%M:%S')\n",
     "                format_date.append(value)\n",
-    "            else: \n",
-    "                #Error de formato\n",
-    "                value = datetime.strptime('2050-2-2 00:00:00', '%Y-%m-%d %H:%M:%S')\n",
-    "                format_date.append(value)\n",
+    "            except:\n",
+    "                try:\n",
+    "                    value = datetime.strptime(str(value), '%Y-%m-%d')\n",
+    "                    format_date.append(value)\n",
+    "                except:\n",
+    "                    value = 'Format Error'\n",
+    "                    format_date.append(value)\n",
     "        else:\n",
-    "            #Fechas normales\n",
-    "            value = datetime.strptime(str(value), '%Y-%m-%d %H:%M:%S')\n",
+    "            value = 'Empty date'\n",
     "            format_date.append(value)\n",
-    "    \n",
-    "    return format_date\n",
-    "    \n"
+    "\n",
+    "    return format_date\n"
    ]
   },
   {
@@ -117,14 +117,8 @@
     "# Request Type\n",
     "\n",
     "request_type = ca[['Request ID', 'Request Type']].copy()\n",
-    "\n",
-    "for i, row in request_type.iterrows():\n",
-    "    if pd.isnull(row['Request Type']) == True:\n",
-    "        request_type.loc[[i],['Request Type']] = 'Request Type Empty'\n",
-    "    else:\n",
-    "        request_type.loc[[i],['Request Type']] = None\n",
-    "\n",
-    "request_type.dropna(axis=0, subset=['Request Type'], inplace=True)\n"
+    "request_type = request_type[pd.isna(request_type['Request Type'])]\n",
+    "request_type['Request Type'] = 'Request Type Empty'"
    ]
   },
   {
@@ -136,14 +130,8 @@
     "# Join Call\n",
     "\n",
     "join_call = ca[['Request ID', 'Join Call']].copy()\n",
-    "\n",
-    "for i, row in join_call.iterrows():\n",
-    "    if pd.isnull(row['Join Call']) == True:\n",
-    "        join_call.loc[[i],['Join Call']] = 'Join Call Empty'\n",
-    "    else:\n",
-    "        join_call.loc[[i],['Join Call']] = None\n",
-    "\n",
-    "join_call.dropna(axis=0, subset=['Join Call'], inplace=True)\n"
+    "join_call = join_call[pd.isna(join_call['Join Call'])]\n",
+    "join_call['Join Call'] = 'Join Call Empty'"
    ]
   },
   {
@@ -173,27 +161,28 @@
    "outputs": [],
    "source": [
     "# Date Received\n",
+    "def column_comparison_2(a,b):\n",
+    "    ans = 'NA'\n",
+    "    if type(a) == datetime:\n",
+    "        if a < Timestamp('2021-10-15 00:00:00'):\n",
+    "            ans = '15/oct error'\n",
+    "        elif type(a) == datetime and type(b) == datetime:\n",
+    "            if a > b:\n",
+    "                ans = 'PAR requested is lower'\n",
+    "            elif a <= b:\n",
+    "                ans = 'correct'\n",
+    "    elif a == 'Empty date':\n",
+    "        ans = 'Empty date'\n",
+    "    elif a == 'Format Error':\n",
+    "        ans = 'Format Error'  \n",
+    "    return ans\n",
     "\n",
     "date_received = ca[['Request ID', 'Date received', 'PAR Requested']].copy()\n",
     "date_received['Date received'] = format_date_column(date_received['Date received'])\n",
     "date_received['PAR Requested'] = format_date_column(date_received['PAR Requested'])\n",
-    "\n",
-    "for index, row in date_received.iterrows():\n",
-    "    if row['Date received'] == Timestamp('2030-2-2 00:00:00'):\n",
-    "        date_received.loc[[index], ['Date received']] = 'Empty Date'\n",
-    "    elif row['Date received'] == Timestamp('2050-2-2 00:00:00'):\n",
-    "        date_received.loc[[index], ['Date received']] = 'Format Error'\n",
-    "    elif row['Date received'] < Timestamp('2021-10-15 00:00:00'):\n",
-    "        date_received.loc[[index], ['Date received']] = '15/oct error'\n",
-    "    elif row['Date received'] > row['PAR Requested']:\n",
-    "        if row['PAR Requested'] != Timestamp('2030-2-2 00:00:00') and row['PAR Requested'] != Timestamp('2050-2-2 00:00:00'):\n",
-    "            date_received.loc[[index], ['Date received']] = 'Date greater than PAR requested'\n",
-    "        else:\n",
-    "            date_received.loc[[index], ['Date received']] = None\n",
-    "    else:\n",
-    "        date_received.loc[[index], ['Date received']] = None\n",
-    "\n",
-    "date_received.dropna(axis=0, subset=['Date received'], inplace=True)\n",
+    "date_received['A'] = date_received[['Date received','PAR Requested']].apply(lambda row: column_comparison_2(row[0],row[1]), axis=1)\n",
+    "date_received = date_received[~(date_received['A'] == 'correct')]\n",
+    "date_received = date_received[~(date_received['A'] == 'NA')]\n",
     "date_received.drop(axis=1, columns=['PAR Requested'], inplace=True)"
    ]
   },
@@ -486,18 +475,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Status\n",
+    "# Account Stage // Status\n",
+    "\n",
+    "def first_character(value):\n",
+    "    char = 'A'\n",
+    "    if pd.notna(value):\n",
+    "        if value[0] != ' ':\n",
+    "            char = value[0]\n",
+    "        else:\n",
+    "            char = value[1]\n",
+    "    else:\n",
+    "        char = value\n",
+    "\n",
+    "    return char\n",
     "\n",
     "c_status = ca[['Request ID', 'Account Stage', 'Status']].copy()\n",
-    "\n",
-    "for j, row in c_status.iterrows():\n",
-    "    if pd.isnull(row['Account Stage']) == False and pd.isnull(row['Status']) == True:\n",
-    "        c_status.loc[[j], ['Status']] = 'must fill this cell'\n",
-    "    else:\n",
-    "        c_status.loc[[j], ['Status']] = None\n",
-    "\n",
-    "c_status.dropna(axis=0, subset=['Status'], inplace=True)\n",
-    "c_status.drop(axis=1, columns=['Account Stage'], inplace=True)"
+    "c_status['Charecter Stage'] = c_status['Account Stage'].apply(first_character)\n",
+    "c_status['Charecter Status'] = c_status['Status'].apply(first_character)\n",
+    "c_status = c_status[c_status['Charecter Stage'] != c_status['Charecter Status']]\n",
+    "c_status[['Account Stage','Status']] = c_status[['Account Stage','Status']].fillna('Empty value')  \n",
+    "c_status[['Account Stage','Status']] = c_status[['Account Stage','Status']].applymap(lambda x: 'different Stage vs Status' if x != 'Empty value' else x)\n",
+    "c_status.drop(axis=1, columns=['Charecter Stage','Charecter Status'], inplace=True)\n"
    ]
   },
   {
@@ -652,30 +650,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Follow up 2-3 validation function\n",
+    "\n",
+    "def column_comparison(a,b,c):\n",
+    "    ans = 'N/A'\n",
+    "    if (type(a) == datetime) and (type(b) == datetime) and (type(c) == datetime):        \n",
+    "        if (a < b) and (b < c):\n",
+    "            ans = 'correct'    \n",
+    "        elif (a > b) and (b > c):\n",
+    "            ans = 'relation error'           \n",
+    "        elif a > b:\n",
+    "            ans = 'Previus column date is greater'            \n",
+    "        elif b > c:\n",
+    "            ans = 'Closed Date is lower'            \n",
+    "        else:\n",
+    "            ans = 'correct'\n",
+    "\n",
+    "    elif (type(a) == datetime) and (type(b) == datetime):\n",
+    "        if a > b:\n",
+    "            ans = 'Previus column date is greater'\n",
+    "        else: \n",
+    "            ans = 'correct'\n",
+    "    \n",
+    "    elif b == 'Format Error':\n",
+    "        ans = 'Format Error'\n",
+    "\n",
+    "    return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Follow up 2\n",
     "\n",
     "follow2 = ca[['Request ID', 'Date Follow Up 1', 'Date Follow Up 2','Closed Date']].copy()\n",
-    "follow2['Closed Date'] = format_date_column(follow2['Closed Date'])\n",
     "follow2['Date Follow Up 1'] = format_date_column(follow2['Date Follow Up 1'])\n",
     "follow2['Date Follow Up 2'] = format_date_column(follow2['Date Follow Up 2'])\n",
-    "\n",
-    "for index, row in follow2.iterrows():\n",
-    "    if row['Closed Date'] == Timestamp('2030-2-2 00:00:00') and row['Date Follow Up 2'] == Timestamp('2030-2-2 00:00:00'):\n",
-    "        follow2.loc[[index], ['Date Follow Up 2']] = 'should not be empty'\n",
-    "    if row['Date Follow Up 1'] != Timestamp('2030-2-2 00:00:00') and row['Date Follow Up 1'] != Timestamp('2050-2-2 00:00:00'):\n",
-    "        if row['Date Follow Up 2'] != Timestamp('2030-2-2 00:00:00') and row['Date Follow Up 2'] != Timestamp('2050-2-2 00:00:00'): \n",
-    "            if row['Date Follow Up 1'] > row['Date Follow Up 2']:\n",
-    "                follow2.loc[[index], ['Date Follow Up 2']] = 'Follow 1 greater'\n",
-    "    if row['Date Follow Up 2'] == Timestamp('2050-2-2 00:00:00'):\n",
-    "            follow2.loc[[index], ['Date Follow Up 2']] = 'Format Error'\n",
-    "    \n",
-    "for index, row in follow2.iterrows():\n",
-    "   if type(row['Date Follow Up 2']) == Timestamp:\n",
-    "      follow2.loc[[index], ['Date Follow Up 2']] = None\n",
-    "            \n",
-    "follow2.dropna(axis=0, subset=['Date Follow Up 2'], inplace=True)\n",
-    "follow2.drop(axis=1, columns=['Date Follow Up 1'], inplace=True)\n",
-    "follow2.drop(axis=1, columns=['Closed Date'], inplace=True)"
+    "follow2['Closed Date'] = format_date_column(follow2['Closed Date'])\n",
+    "follow2 = follow2[~(follow2['Date Follow Up 2'] == 'Empty date')]\n",
+    "follow2 = follow2[~(follow2['Date Follow Up 1'] == 'Empty date')]\n",
+    "follow2 = follow2[~(follow2['Date Follow Up 1'] == 'Format Error')]\n",
+    "#follow2 = follow2[~((follow2['Date Follow Up 1'] == 'Empty date') & (follow2['Date Follow Up 2'] == 'Empty date') & (follow2['Closed Date'] == 'Empty date'))]\n",
+    "#follow2 = follow2[~(((follow2['Date Follow Up 1'] != 'Empty date') | (follow2['Date Follow Up 1'] != 'Format Error')) & (follow2['Date Follow Up 2'] == 'Empty date') & ((follow2['Closed Date'] != 'Empty date') | (follow2['Closed Date'] != 'Format Error')))]\n",
+    "follow2['Date Follow Up 2'] = follow2[['Date Follow Up 1','Date Follow Up 2','Closed Date']].apply(lambda row : column_comparison(row[0],row[1],row[2]), axis=1) \n",
+    "follow2 = follow2[~(follow2['Date Follow Up 2'] == 'correct')]\n",
+    "follow2.drop(axis=1, columns=['Date Follow Up 1', 'Closed Date'], inplace=True)"
    ]
   },
   {
@@ -687,27 +709,15 @@
     "# Follow up 3\n",
     "\n",
     "follow3 = ca[['Request ID', 'Date Follow Up 2', 'Date Follow Up 3','Closed Date']].copy()\n",
-    "follow3['Closed Date'] = format_date_column(follow3['Closed Date'])\n",
     "follow3['Date Follow Up 2'] = format_date_column(follow3['Date Follow Up 2'])\n",
     "follow3['Date Follow Up 3'] = format_date_column(follow3['Date Follow Up 3'])\n",
-    "\n",
-    "for index, row in follow3.iterrows():\n",
-    "    if row['Closed Date'] == Timestamp('2030-2-2 00:00:00') and row['Date Follow Up 3'] == Timestamp('2030-2-2 00:00:00'):\n",
-    "        follow3.loc[[index], ['Date Follow Up 3']] = 'should not be empty'\n",
-    "    if row['Date Follow Up 2'] != Timestamp('2030-2-2 00:00:00') and row['Date Follow Up 2'] != Timestamp('2050-2-2 00:00:00'):\n",
-    "        if row['Date Follow Up 3'] != Timestamp('2030-2-2 00:00:00') and row['Date Follow Up 3'] != Timestamp('2050-2-2 00:00:00'): \n",
-    "            if row['Date Follow Up 2'] > row['Date Follow Up 3']:\n",
-    "                follow3.loc[[index], ['Date Follow Up 3']] = 'Follow 2 greater'\n",
-    "    if row['Date Follow Up 3'] == Timestamp('2050-2-2 00:00:00'):\n",
-    "            follow3.loc[[index], ['Date Follow Up 3']] = 'Format Error'\n",
-    "    \n",
-    "for index, row in follow3.iterrows():\n",
-    "   if type(row['Date Follow Up 3']) == Timestamp:\n",
-    "      follow3.loc[[index], ['Date Follow Up 3']] = None\n",
-    "            \n",
-    "follow3.dropna(axis=0, subset=['Date Follow Up 3'], inplace=True)\n",
-    "follow3.drop(axis=1, columns=['Date Follow Up 2'], inplace=True)\n",
-    "follow3.drop(axis=1, columns=['Closed Date'], inplace=True)"
+    "follow3['Closed Date'] = format_date_column(follow3['Closed Date'])\n",
+    "follow3 = follow3[~(follow3['Date Follow Up 3'] == 'Empty date')]\n",
+    "follow3 = follow3[~(follow3['Date Follow Up 2'] == 'Empty date')]\n",
+    "follow3 = follow3[~(follow3['Date Follow Up 2'] == 'Format Error')]\n",
+    "follow3['Date Follow Up 3'] = follow3[['Date Follow Up 2','Date Follow Up 3','Closed Date']].apply(lambda row : column_comparison(row[0],row[1],row[2]), axis=1) \n",
+    "follow3 = follow3[~(follow3['Date Follow Up 3'] == 'correct')]\n",
+    "follow3.drop(axis=1, columns=['Date Follow Up 2', 'Closed Date'], inplace=True)"
    ]
   },
   {
