--- a/Main.ipynb
+++ b/Main.ipynb
@@ -795,8 +795,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#send_msg('maria.rojas@nub78.com', myMail, subjectEmail , msg1 % 'Maria Paula', True)\n",
-    "#wqgit losend_msg('jonnathan.neira@nub78.com', myMail, subjectEmail , msg1 % 'Jonathan Neira', True)"
+    "send_msg('maria.rojas@nub78.com', myMail, subjectEmail , msg1 % 'Maria Paula', True)\n",
+    "send_msg('jonnathan.neira@nub78.com', myMail, subjectEmail , msg1 % 'Jonathan Neira', True)"
    ]
   },
   {
@@ -807,13 +807,6 @@
    "source": [
     "outlServer.quit()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
