Added _Advisor Name_ column in the report

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -709,6 +709,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Names of Compass team\n",
+    "\n",
+    "compass_names = df_compass[['Request ID','Advisor Name']]\n",
+    "final_report = compass_names.merge(final_report, how='right', left_on='Request ID', right_on='Request ID')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "final_report.to_excel('compass_error_report_%s.xlsx' % today, index=False)\n",
     "format_report.format_excel()"
    ]
@@ -726,12 +738,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Names of Compass team\n",
+    "# Email list\n",
     "\n",
-    "compass_names = df_compass[['Request ID','Advisor Name']]\n",
-    "final_report = final_report.merge(compass_names, how='left', left_on='Request ID', right_on='Request ID')\n",
-    "error_names = final_report['Advisor Name_y'].to_frame().drop_duplicates().dropna()\n",
-    "send_names = error_names.merge(compass_mails, how='left', left_on='Advisor Name_y', right_on='Advisor Name')"
+    "error_names = final_report['Advisor Name_x'].to_frame().drop_duplicates().dropna()\n",
+    "send_names = error_names.merge(compass_mails, how='left', left_on='Advisor Name_x', right_on='Advisor Name')\n",
+    "send_names"
    ]
   },
   {
