Send report by Name
1. In the for function that send the emails, it was added a line of code
   to send the report by coverage advisor name

--- a/main.ipynb
+++ b/main.ipynb
@@ -85,8 +85,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def format_date_column(serie):\n",
     "    format_date = []\n",
     "    for id, value in serie.iteritems():\n",
@@ -105,7 +103,7 @@
     "            value = 'Empty date'\n",
     "            format_date.append(value)\n",
     "\n",
-    "    return format_date\n"
+    "    return format_date"
    ]
   },
   {
@@ -151,7 +149,7 @@
     "    else:    \n",
     "        upcoming_renewal.loc[[index],['Upcoming Renewal']] = None\n",
     "\n",
-    "upcoming_renewal.dropna(axis=0, subset=['Upcoming Renewal'], inplace=True)\n"
+    "upcoming_renewal.dropna(axis=0, subset=['Upcoming Renewal'], inplace=True)"
    ]
   },
   {
@@ -193,18 +191,18 @@
    "outputs": [],
    "source": [
     "# Coverage Advisor\n",
+    "def coverage_adv(a):\n",
+    "    ans = a\n",
+    "    if pd.isna(a) == True:\n",
+    "        ans = 'Empty Name'\n",
+    "    else: \n",
+    "        if set(a).difference(printable):\n",
+    "            ans = 'Special Character in Name'\n",
+    "    return ans\n",
     "\n",
     "cov_adv = ca[['Request ID', 'Coverage Advisor']].copy()\n",
-    "\n",
-    "for index, row in cov_adv.iterrows():\n",
-    "    if pd.isnull(row['Coverage Advisor']) == True:\n",
-    "        cov_adv.loc[[index], ['Coverage Advisor']] = 'Empty Name'\n",
-    "    elif set(row['Coverage Advisor']).difference(printable):\n",
-    "        cov_adv.loc[[index], ['Coverage Advisor']] = 'Special Caracter in Name'\n",
-    "    else:\n",
-    "        cov_adv.loc[[index], ['Coverage Advisor']] = None\n",
-    "\n",
-    "cov_adv.dropna(axis=0, subset=['Coverage Advisor'], inplace=True)"
+    "cov_adv['Coverage Advisor'] = cov_adv['Coverage Advisor'].apply(coverage_adv)\n",
+    "cov_adv = cov_adv[(cov_adv['Coverage Advisor'] == 'Empty Name') | (cov_adv['Coverage Advisor'] == 'Special Character in Name')]"
    ]
   },
   {
@@ -538,7 +536,7 @@
     "            oppty.loc[[index],[loc]] = None\n",
     "\n",
     "oppty.dropna(axis=0, how='all', subset=['Miss Attach Opportunity', 'Expired Opportunity', 'LDoS Opportunity'], inplace=True)\n",
-    "oppty.drop(axis=1, columns=['Account Stage'], inplace=True)\n"
+    "oppty.drop(axis=1, columns=['Account Stage'], inplace=True)"
    ]
   },
   {
@@ -733,7 +731,7 @@
     "            follow2, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "            follow3, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "            follow_eft, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
-    "            closig_dat, how='outer', left_on='Request ID', right_on='Request ID')\n"
+    "            closig_dat, how='outer', left_on='Request ID', right_on='Request ID')"
    ]
   },
   {
@@ -745,9 +743,7 @@
     "new_table.drop_duplicates(subset=['Request ID'], inplace=True)\n",
     "new_table.dropna(axis=0, how='all', subset=new_table.columns[2:], inplace=True)  \n",
     "t_names = ca[['Request ID','Coverage Advisor']]\n",
-    "new_table = t_names.merge(new_table, how='right', left_on='Request ID', right_on='Request ID')\n",
-    "new_table.to_excel('error_report_%s.xlsx' % today, index=False)    \n",
-    "excel_formating.format_excel()"
+    "new_table = t_names.merge(new_table, how='right', left_on='Request ID', right_on='Request ID')"
    ]
   },
   {
@@ -818,8 +814,26 @@
    "source": [
     "for i, sheet in mail_table.iterrows():\n",
     "    if pd.isnull(sheet['Email']) == False:\n",
-    "        send_msg(sheet['Email'], myMail, subjectEmail , msg1 % sheet['Coverage Advisor'], True)\n",
-    "        print(sheet['Email'])"
+    "        df_sent = new_table[new_table['Coverage Advisor_x'] == sheet['Coverage Advisor']]\n",
+    "        df_sent.to_excel('error_report_%s.xlsx' % today, index=False)    \n",
+    "        excel_formating.format_excel()\n",
+    "        if df_sent.shape[0] > 0:\n",
+    "            send_msg(sheet['Email'], myMail, subjectEmail , msg1 % sheet['Coverage Advisor'], True)\n",
+    "            print(sheet['Email'])\n",
+    "        else:\n",
+    "            print('Not send to: '+sheet['Email'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## General report\n",
+    "\n",
+    "new_table.to_excel('error_report_%s.xlsx' % today, index=False)    \n",
+    "excel_formating.format_excel()"
    ]
   },
   {
