Reports by Name
1. Modified for function to send report by compass advisor name

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -721,8 +721,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_report.to_excel('compass_error_report_%s.xlsx' % today, index=False)\n",
-    "format_report.format_excel()"
+    "final_report"
    ]
   },
   {
@@ -793,11 +792,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i, sheet in send_names.iterrows():\n",
-    "    if pd.isnull(sheet['Mail']) == False:\n",
-    "        \n",
-    "        send_msg(sheet['Mail'], myMail, subjectEmail , msg1 % sheet['Advisor Name'], True)\n",
-    "        print(sheet['Mail'])"
+    "for i, colm in send_names.iterrows():\n",
+    "    if pd.isnull(colm['Mail']) == False:\n",
+    "        df_sent = final_report[final_report['Advisor Name_x'] == colm['Advisor Name']]\n",
+    "        df_sent.to_excel('compass_error_report_%s.xlsx' % today, index=False)\n",
+    "        format_report.format_excel()\n",
+    "        if df_sent.shape[0] > 0:\n",
+    "            send_msg(colm['Mail'], myMail, subjectEmail , msg1 % colm['Advisor Name'], True)\n",
+    "            print(colm['Mail'])\n",
+    "        else:\n",
+    "            print('Not send to: '+colm['Email'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_report.to_excel('compass_error_report_%s.xlsx' % today, index=False)\n",
+    "format_report.format_excel()"
    ]
   },
   {
