--- a/Main.ipynb
+++ b/Main.ipynb
@@ -40,11 +40,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import data\n",
     "p = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/CAB%20Trackers/Daily%20CAB%20Tracker.xlsx\",\n",
     "              filename='Daily CAB Tracker.xlsx')\n",
     "df_compass = pd.read_excel('Daily CAB Tracker.xlsx', sheet_name='Tracker')\n",
-    "df_compass.dropna(axis=0, how='all', subset=['Request ID', 'Customer Name'], inplace=True)\n"
+    "df_compass.dropna(axis=0, how='all', subset=['Request ID', 'Customer Name'], inplace=True)\n",
+    "df_compass = df_compass[df_compass['RR (internal)'] == 'Yes']"
    ]
   },
   {
